--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.env
+
 
 # Created by https://www.gitignore.io/api/webstorm,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=webstorm,visualstudiocode
