--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AlexisGJ/McGillDesignProject#readme",
   "dependencies": {
+    "dotenv": "^6.2.0",
     "http": "0.0.0"
   }
 }
