--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next",
     "build": "next build",
-    "start": "HTTPS=true next start"
+    "start": "HTTPS=true next start -p process.env.PORT"
   },
   "repository": {
     "type": "git",
