--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.4",
     "mocha": "^6.0.2",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23",
     "mongoose": "^5.4.9",
     "passport": "^0.4.0",
     "serve": "^8.2.0"
